--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
-.antlr
-debug.test
-.vscode
+vendor/
+glide
+build/
+
+vendor
+vendor/
+vendor/*
+vendor/**
+
+yql
+
+_examples/simple/simple
+
+bin
+bin/
+bin/*
+bin/**
+
+dist
+dist/
+dist/*
+dist/**
+
+plugin/packages/cmake
+plugin/packages/cmake/
+plugin/packages/cmake/*
+plugin/packages/cmake/**
